2004-10-14  Sivaiah Nallagatla <snallagatla@novell.com>

	* mail-errors.xml : Remove Pango markup from groupwise 
	account setup error message 

2004-10-12  Not Zed  <NotZed@Ximian.com>

	* em-format-html-display.c (efhd_find_handler): use builtin
	handlers (and plugins) always overriding bonobo ones.

2004-10-11  Not Zed  <NotZed@Ximian.com>

	** See bug #67408.

	* em-folder-view.c (emfv_gui_folder_changed): noop if we were
	destroyed.
	(emfv_destroy): set destroyed bit.

2004-10-11  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (mc_startup): register the formatter types
	before registering the formatter hook.

2004-10-08  JP Rosevear  <jpr@novell.com>
 
	* mail-account-gui.c (browse_clicked): use "Select a file"
	
2004-10-08  Harry Lu  <harry.lu@sun.com>

	* em-folder-tree.c: (em_folder_tree_class_init), (real_popup_menu),
	(emft_popup_menu), (emft_tree_button_press): implement popup_menu
	so that popup menu can be shown with Shift+F10 on folder tree.
	* em-folder-view.c: (emfv_popup), (emfv_list_key_press):
	same as above.

2004-10-07  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (mc_startup): dont init the base plugin system
	here anymore, only register the hook types for mail hooks.

2004-09-28  Not Zed  <NotZed@Ximian.com>

	* em-composer-utils.c (forward_non_attached): put back in the
	attachment attaching code.  Doesn't work for s/mime and pgp, but
	why bother arguing about it.

2004-10-06  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree.c (emft_get_folder_info__desc): fix busted cast.

	* *.c: e-popup api changes.

2004-10-06  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree.c (emft_tree_button_press): remove some debug
	that made it in accidentally.

2004-10-05  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree.c (emft_popup_copy_folder_selected): remove old
	debug which no longer works.

	** See bug #66991 (related to #64377).

	* em-folder-tree.c (em_folder_tree_set_selected): if we get a NULL
	uri or "", just clear the list.